feat: use variables for load_from_db inputs (#424)
This uses Stepflow variables to implement `load_from_db` inputs.
This allows passing the variable when executing the flow.

This is part of #320 (specifically, part 2, 3 and 4) of the langflow
steps identified https://github.com/stepflow-ai/stepflow/issues/320#issuecomment-3549510640).

This also simplifies some of the python code (removing dead code) and fixes a bug in JsonPath (where `null` wasn't parsing as an empty JsonPath).

--- a/.github/actions/langflow-checks/action.yml
+++ b/.github/actions/langflow-checks/action.yml
@@ -10,6 +10,9 @@ inputs:
     description: 'uv version to install'
     required: false
     default: '0.7.5'
+  openai-api-key:
+    description: 'OpenAI API Key for Langflow tests'
+    required: true
 
 runs:
   using: 'composite'
@@ -33,8 +36,7 @@ runs:
     - name: Configure Rust cache
       uses: Swatinem/rust-cache@v2
       with:
-        workspaces: |
-          stepflow-rs
+        workspaces: stepflow-rs
 
     - name: Build Stepflow binary (needed for integration tests)
       shell: bash
@@ -46,3 +48,5 @@ runs:
     - name: Run Langflow integration checks
       shell: bash
       run: ./scripts/check-langflow.sh
+      env:
+        OPENAI_API_KEY: ${{ inputs.openai-api-key }}
