--- a/stepflow-rs/deny.toml
+++ b/stepflow-rs/deny.toml
@@ -82,6 +82,7 @@ ignore = [
     { id = "RUSTSEC-2025-0069", reason = "daemonize is unmaintained, but used in pingora (see https://github.com/cloudflare/pingora/issues/699)"},
     { id = "RUSTSEC-2024-0375", reason = "atty is unmaintained, but used in pingora (https://github.com/cloudflare/pingora/issues/450)"},
     { id = "RUSTSEC-2021-0145", reason = "unaligned read in atty (see https://github.com/cloudflare/pingora/issues/150)"},
+    { id = "RUSTSEC-2025-0134", reason = "https://github.com/fussybeaver/bollard/issues/612 (via testcontainers)"},
 ]
 # If this is true, then cargo deny will use the git executable to fetch advisory database.
 # If this is false, then it uses a built-in git library.
