--- a/stepflow-rs/crates/stepflow-analysis/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-analysis/Cargo.toml
@@ -19,6 +19,7 @@ doctest = false
 bit-set.workspace = true
 error-stack.workspace = true
 indexmap.workspace = true
+itertools.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
