feat: Defines initial set of six basic request metrics for export from pingora LB into grafana. Closes #427

--- a/stepflow-rs/crates/stepflow-load-balancer/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-load-balancer/Cargo.toml
@@ -14,6 +14,9 @@ pingora-core = "0.6"
 pingora-http = "0.6"
 pingora-proxy = "0.6"
 
+# Metrics
+prometheus = "0.13"
+
 # Async runtime
 async-trait.workspace = true
 tokio.workspace = true
