--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -85,6 +85,7 @@ tokio-stream = { version = "0.1.17", features = ["io-util"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace"] }
 trait-variant = "0.1.2"
+trie-rs = "0.4.2"
 url = { version = "2.5.4", features = ["serde"]}
 utoipa = { version = "5.3", features = ["axum_extras", "chrono", "indexmap", "rc_schema", "url", "uuid"] }
 utoipa-axum = "0.2"
