--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -32,6 +32,7 @@ serde.workspace = true
 sha2.workspace = true
 stepflow-observability.workspace = true
 thiserror.workspace = true
+trie-rs.workspace = true
 log.workspace = true
 utoipa.workspace = true
 uuid.workspace = true
